picture overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -129,7 +129,7 @@ pre {
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  height: 100%;
+  height: 90%;
 }
 
 .answer-placeholder {
@@ -159,6 +159,6 @@ pre {
 
 @media (min-width: 947px) {
   .container {
-    margin: 2rem auto;
+    margin: 1rem auto;
   }
 }
